--- a/style.css
+++ b/style.css
@@ -17,11 +17,7 @@ p.warn {
 	font-family: Verdana, Geneva, sans-serif;
 }
 
-div {
-	text-align: center;
-}
-
-button.but {
+button {
 	background-color: white;
 	border: none;
 	color: black;
@@ -36,7 +32,7 @@ button.but {
 
 }
 
-.but:hover {
+button:hover {
 	background-color: black;
 	color: white;
 	border: 2px solid white;
